# deadcss-demo

./: .gitignore  LICENSE  README.md  go.mod  main.go
.devcontainer/: devcontainer.json
cmd/deadcss/: main.go
cmd/deadcss/cmd/: root.go  scan.go
docs/: TUTORIAL.md
funchaiku/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
lsp-server/: go.mod  main.go
python/: main.py  pyproject.toml
python/agents/: css_analyser.py
python/src/api/: app.py
test-files/: hello-world.go  hello-world.js  hello-world.py
